--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,8 @@
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "vitest.config.ts",
+    "vite.config.ts"
   ]
 }
