Add API routes for managing users, nodes, and connections in the ENS Network application. Implement database migration and connection testing scripts. Update environment configuration and package dependencies for PostgreSQL integration. Enhance UI components for network graph visualization and ENS name search functionality.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY
+DATABASE_URL="postgresql://postgres:password123@db.supabase.co:5432/postgres?sslmode=require"
