--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "test:db": "node test/test-connection.js"
   },
   "dependencies": {
     "@ensdomains/ensjs": "^4.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@xyflow/react": "^12.3.5",
     "next": "^16.0.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.21.54",
@@ -42,4 +44,3 @@
   },
   "packageManager": "pnpm@8.15.0"
 }
-
