--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "test:db": "node test/test-connection.js"
+    "test:db": "node test/test-connection.js",
+    "db:migrate": "node scripts/migrate.js",
+    "db:migrate:ts": "tsx scripts/migrate.ts",
+    "db:check": "node scripts/check-tables.js",
+    "db:status": "node scripts/check-tables.js",
+    "db:test": "node test/test-connection.js",
+    "db:reset": "node scripts/migrate.js"
   },
   "dependencies": {
     "@ensdomains/ensjs": "^4.2.0",
@@ -33,8 +39,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.5"
   },
