--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@biomejs/biome": "^1.9.4",
     "@tanstack/react-query-devtools": "^5.60.5",
     "@types/node": "^22.10.1",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
